--- a/pom.xml
+++ b/pom.xml
@@ -229,12 +229,14 @@
 			<id>beisen-releases</id>
 			<name>Nexus Release Repository</name>
 			<url>http://repository.beisen-inc.com/repository/maven-releases/</url>
+			<uniqueVersion>false</uniqueVersion>
 		</repository>
 
 		<snapshotRepository> <!-- 如果没有配置该元素，默认部署到repository元素配置的仓库 -->
 			<id>beisen-snapshots</id>
 			<name>Nexus Snapshot Repository</name>
 			<url>http://repository.beisen-inc.com/repository/maven-snapshots/</url>
+			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
 	</distributionManagement>
 
