--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -25,7 +25,7 @@
   </parent>
 
   <artifactId>hibernate-tools-maven</artifactId>
-
+  <version>6.0.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>Hibernate Tools Maven Plugin</name>
