--- a/orm/pom.xml
+++ b/orm/pom.xml
@@ -29,7 +29,7 @@
 	</parent>
 
 	<artifactId>hibernate-tools-orm</artifactId>
-
+	<version>6.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>Hibernate Tools ORM</name>
