--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     
     <groupId>org.hibernate.tool</groupId>
     <artifactId>hibernate-tools-parent</artifactId>
-    <version>6.0.0-SNAPSHOT</version>
+    <version>6.0.0</version>
 
     <packaging>pom</packaging>
  
@@ -229,14 +229,12 @@
 			<id>beisen-releases</id>
 			<name>Nexus Release Repository</name>
 			<url>http://repository.beisen-inc.com/repository/maven-releases/</url>
-			<uniqueVersion>false</uniqueVersion>
 		</repository>
 
 		<snapshotRepository> <!-- 如果没有配置该元素，默认部署到repository元素配置的仓库 -->
 			<id>beisen-snapshots</id>
 			<name>Nexus Snapshot Repository</name>
 			<url>http://repository.beisen-inc.com/repository/maven-snapshots/</url>
-			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
 	</distributionManagement>
 
